# rag_ui

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/rag_ui/core/: config.py  models.py
src/rag_ui/core/modules/: product_search.py  search.py  speech_enhance.py  web.py
src/rag_ui/data/: preprocessing.py
src/rag_ui/db/: vectorstore.py
src/rag_ui/inference/: embed.py  ollama_client.py  prompt.py  whisper.py
src/rag_ui/ui/: app.py  callbacks.py  helper.py  layout.py
src/rag_ui/ui/assets/: recorder.js  styles.css
src/rag_ui/ui/pages/rag/: callbacks.py  index.py  layout.py
src/rag_ui/ui/pages/speech/: callbacks.py  index.py  layout.py
